test/simple/ill-typed/wrap_lazy_tail1.caprice
(* TEST
  typing = ill-typed;
  flags = " -s -w yes";
  typecheck;
*)

let f (ls : list (int -> int)) : unit =
  let w : list ({ i : int | i > 0 } -> int) = ls in
  let ls2 = (fun i -> i) :: w in
  (* The match will finally pull on the wrapped tail and evaluate it *)
  match ls2 with
  | _ :: [] -> ()
  | _ :: f :: _ ->
    let _ = f 0 in (* ERROR: application error *)
    ()
  end
